--- a/juju/src/main/webapp/resources/css/style.css
+++ b/juju/src/main/webapp/resources/css/style.css
@@ -114,7 +114,7 @@
         border: none;
         margin-top: 0;
         top: 150%;
-        right: 0;
+        /* right: 0; */
         opacity: 0;
         visibility: hidden;
         transition: .5s;
