--- a/juju/src/main/webapp/resources/css/style.css
+++ b/juju/src/main/webapp/resources/css/style.css
@@ -138,7 +138,7 @@
     display: flex;
     align-items: center;
     text-align: start;
-    background: rgba(0, 0, 0, .35);
+    background: rgba(0, 0, 0, .2);
     z-index: 1;
 }
 
@@ -151,8 +151,8 @@
 .carousel-control-next-icon {
     width: 4rem;
     height: 4rem;
-    background-color: var(--dark);
-    border: 15px solid var(--dark);
+    /* background-color: var(--dark);
+    border: 15px solid var(--dark); */
     border-radius: 50px;
 }
 
@@ -160,7 +160,7 @@
     content: "\f111";
     font-family: "Font Awesome 5 Free";
     font-weight: 900;
-    color: var(--primary);
+    color: #8FC1D4;
 }
 
 @media (max-width: 768px) {
